--- a/package.json
+++ b/package.json
@@ -23,8 +23,12 @@
     "expo-status-bar": "~2.0.0",
     "expo-system-ui": "~4.0.3",
     "expo-web-browser": "~14.0.1",
+    "i18next": "^23.16.8",
+    "i18next-browser-languagedetector": "^8.0.0",
+    "i18next-http-backend": "^3.0.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-i18next": "^15.1.1",
     "react-native": "0.76.2",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
